--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "hook-store",
   "version": "0.0.1",
   "description": "A state management library for React using context and hooks.",
-  "main": "index.ts",
+  "main": "index.cjs.js",
+  "module": "index.es.js",
+  "unpkg": "index.min.js",
+  "types": "index.d.ts",
   "keywords": [
     "react"
   ],
@@ -12,16 +15,25 @@
   "author": "wuwenbang",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
+    "@babel/preset-env": "^7.23.6",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/react": "^18.2.45",
     "react": "^18.2.0",
+    "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
-  "type": "module"
+  "dependencies": {
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "rollup-plugin-terser": "^7.0.2"
+  }
 }
