--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "hostore",
-  "version": "0.0.1",
+  "version": "0.0.1-beta.1",
   "description": "A state management library for React using context and hooks.",
-  "main": "index.cjs.js",
-  "module": "index.es.js",
-  "unpkg": "index.min.js",
-  "types": "index.d.ts",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.es.js",
+  "unpkg": "./dist/index.min.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "react"
   ],
@@ -18,6 +21,8 @@
     "@babel/core": "^7.23.6",
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -26,14 +31,11 @@
     "react": "^18.2.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-typescript2": "^0.36.0",
+    "rollup-plugin-terser": "^7.0.2",
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
-  "dependencies": {
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
-    "rollup-plugin-terser": "^7.0.2"
-  }
+  "dependencies": {}
 }
