--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "rollup -c --bundleConfigAsCjs"
   },
   "author": "wuwenbang",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.23.6",
     "@babel/plugin-transform-react-jsx": "^7.23.4",
