--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hostore",
-  "version": "0.0.5",
+  "version": "0.0.5-beta.1",
   "description": "A state management library for React using context and hooks.",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.es.js",
